<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gastalma</string>
    <string name="action_settings">Settings</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_gastos">Gastos</string>
    <string name="title_activity_agregar_gasto">Agregar Gasto</string>
    <string name="agregar_otro">Agregar otro</string>
    <string name="nombre">Nombre</string>
    <string name="costo">Costo</string>
    <string name="descripcion">Descripción</string>
    <string name="debito">Débito</string>
    <string name="credito">Crédito</string>
    <string name="aceptar">Aceptar</string>
    <string name="agregar">Agregar</string>
    <string name="fecha">Fecha</string>
    <string name="gastos">Gastos</string>
    <string name="ingresos">Ingresos</string>
    <string name="title_activity_ingresos">Ingresos</string>
    <string name="title_activity_agregar_ingreso">Agregar Ingreso</string>
    <string name="ingreso">Ingreso</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="title_activity_estadisticas">Estadísticas</string>
    <string name="configuracion">Configuración</string>
    <string name="total_ingresos">Total Ingresos</string>
    <string name="total_gastos">Total Gastos</string>
    <string name="deudas">Deudas</string>
    <string name="title_activity_deuda">Deuda</string>
    <string name="title_activity_reporte">Reporte</string>
    <string name="title_activity_reporte_ingresos">Reporte Ingresos</string>
    <string name="title_activity_reporte_gastos">Reporte Gastos</string>
    <string name="total_">Total:</string>
    <string name="ingresos_">Ingresos:</string>
    <string name="gastos_">Gastos:</string>
    <string name="_0">0</string>
    <string name="generar">Generar</string>
    <string name="reporte">Reporte</string>
    <string name="balance_">Balance:</string>
    <string name="fecha_de_pago_">Fecha de Pago:</string>
    <string name="ver_pagos">Ver Pagos</string>
    <string name="pagar">Pagar</string>
    <string name="large_text">Large Text</string>
    <string name="faltan_xx_d_as">Faltan XX días</string>
    <string name="xx_d_as">XX días</string>
    <string name="fecha2">Fecha2</string>
    <string name="fecha1">Fecha1</string>
    <string name="medium_text">Medium Text</string>
    <string name="full_name">Full Name</string>
    <string name="_1500_1600">1500&#8211;1600</string>
    <string name="reportes">Reportes</string>
    <string name="header">Header</string>
    <string name="title_activity_prueba">Prueba</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="por_pagar_">Por pagar:</string>
    <string name="title_activity_agregar_gastos">AgregarGastosActivity</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_deudas">Deudas</string>
    <string name="title_activity_prefs">Preferencias</string>
    <string name="title_activity_detalles">DetallesActivity</string>
    <string name="title_activity_reportes">Reportes</string>
    <string name="pagar_m_nimo">Pagar mínimo</string>
    <string name="cantidad_a_pagar">Cantidad a pagar</string>
    <string name="title_activity_historial">Historial de Gastos</string>
    <string name="title_activity_ingresos_historial">Historial de Ingresos</string>
    <string name="buscar_">Buscar..</string>
    <string name="no_hay_datos">No hay datos</string>
    <string name="title_activity_pagos_historial">Historial de Pagos</string>
    <string name="title_activity_about">Acerca de</string>
    <string name="heart">♥</string>
    <string name="gastalma">Gastalma</string>
    <string name="title_activity_lock_pattern">LockPatternActivity</string>
    <string name="summary_intent_preference">Intent</string>
    <string name="title_intent_preference">TODO</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="title_activity_prefs2">Prefs2Activity</string>
    <string name="title_activity_gastos_calendario">Calendario de Gastos</string>
    <string name="title_activity_ingresos_calendario">Calendario de Ingresos</string>
    <string name="copiar">copiar</string>
    <string name="title_activity_gastos_calendario_mes">GastosCalendarioMesActivity</string>
    <string name="title_activity_reporte_gastos_year">ReporteGastosYearActivity</string>

</resources>