<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:whatever="http://schemas.android.com/apk/res/com.gastos.gastalma"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AgregarGastoActivity" >

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" >

        <TableLayout
            android:id="@+id/TableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:checked="true"
                    android:text="@string/debito" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/credito" />
            </RadioGroup>

            <net.kapati.widgets.DatePicker
                android:id="@+id/datePicker1"
                style="@style/Widget.Sherlock.Light.Spinner.DropDown.ActionBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="text|textCapSentences"
                whatever:emptyErrorString="@string/error_field_must_not_be_empty"
                whatever:testType="nocheck" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/costo"
                android:inputType="number|numberDecimal"
                whatever:emptyErrorString="@string/error_field_must_not_be_empty"
                whatever:testType="nocheck" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/descripcion"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLines="10"
                android:scrollbars="vertical" />

        </TableLayout>
    </ScrollView>

</RelativeLayout>